# LaborAid

./: .env.example  .gitignore  LICENSE  README.md  TECHNICAL_DOCUMENTATION.md  ldgx010.doc  start-laboraid.bat  stop-laboraid.bat  快速启动.md  竞赛文档架构.md
LaborAid/backend/: .env.example  LaborAid.db-shm  LaborAid.db-wal  check_db.py  check_docs.py  pyproject.toml  requirements.txt  seed_quick.py  test_api_export.py  test_direct_export.py  test_export2.py  test_export_api.py
LaborAid/backend/.ci-test-venv/: pyvenv.cfg
LaborAid/backend/app/: config.py  main.py
LaborAid/backend/data/: knowledge_crawl_seeds.json  knowledge_crawl_state.json  knowledge_platform_seed.json
LaborAid/backend/scripts/: crawl_knowledge.py  install-chromadb.ps1  scan_npc_js.py  scan_npc_js2.py  scan_npc_js3.py  seed_demo_users.py  smoke_test.py  test_gov_crawl.py  test_html_sources.py  test_law_content.py  test_law_details.py  test_law_download.py  test_law_search_api.py  test_llm_connectivity.py  test_llm_resolver.py  test_npc_api.py  test_npc_ssl.py  test_npc_topic.py  verify_auth.py
LaborAid/backend/templates/: seed_labor_only.py  seed_platform_pack.py  seed_templates.py  seed_utils.py
LaborAid/backend/test_exports/: 4_王伟___劳动仲裁申请书.html  999_2026_6_9_拖欠工资维权_劳动仲裁申请书.html
LaborAid/backend/tests/: conftest.py  test_app_config.py  test_case_analysis.py  test_case_delete_vault.py  test_case_intake_binding.py  test_court_markdown.py  test_documents.py  test_enterprise.py  test_enterprise_query_resolver.py  test_evidence_analysis_format.py  test_external_apis.py  test_format_normalizer.py  (+14 more)
(+486 files in other folders)
